# PocoProject

./: .gitignore  README.md
projects/: CMakeLists.txt
projects/lib/: libPocoActiveRecord.so.94  libPocoCrypto.so.94  libPocoDataMySQL.so.94  libPocoEncodings.so.94  libPocoJWT.so.94  libPocoMongoDB.so.94  libPocoPrometheus.so.94  libPocoRedis.so.94
projects/lib/python3.10/dist-packages/charset_normalizer-3.2.0.dist-info/: RECORD
projects/lib/python3.10/dist-packages/conan-2.0.9.dist-info/: METADATA  RECORD
projects/lib/python3.10/dist-packages/pip-23.2.1.dist-info/: RECORD
